initial file modified

--- a/index.html
+++ b/index.html
@@ -8,37 +8,12 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm left-a ">
-                <a href="index.html"><img src="cup.png" alt="cup-logo" style="width: 25px;height: 25px;position: relative;"></a>
-                <div class="title-a">
-                <p >Plan your activities and control your progress online</p>
-                <img class="bird-a" src="bird.png" alt="bird-image-illustration" style="widows: 150px;height:180px;"/>
-                </div>    
-              
-
-
-            </div>
-            <div class="col-sm left-b "><pre>
-                sdgdjfgd
-                dfzhjjjjjjjjjjjj
-
-
-
-
-
-
-                dfhdzzzzzz
-
-
-
-
-
-
-
-                dxh
-            </pre></div>
+    <div class="main--container">
+        <div class="grid-1">hello</div>
+        <div class="grid-2">
+            
+            <!-- signin starts here -->
+            <!-- signupstart here -->
         </div>
     </div>
 
